--- a/Frand_Lebaza/index.html
+++ b/Frand_Lebaza/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola desde Frand</h1>
+    <h1>Hola desde Frand Lebaza</h1>
     
 </body>
 </html>
