rama de jhon guevara

--- a/Jhon_Guevara/index.html
+++ b/Jhon_Guevara/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Rama de Jhon Fredy</p>
+    <p>Rama de Jhon Fredy Guevara</p>
 </body>
 </html>
