--- a/Santiago_Motato/index.html
+++ b/Santiago_Motato/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola desde html</h1>
-    
+    <p>Rama de Santiago Motato</p>
 </body>
 </html>
